# Simple-Ray-Tracer-w-SDL3-and-OpenCL

./: .gitignore  CMakeLists.txt  README.md
cmake/: EmbedKernels.cmake
customBuildExecutables/: executeDebug.bat  executeRelease.bat  readme.txt
include/: camera.h  render.h  sdlUtils.h  utils.h  vec3.h
kernels/: common.cl  ray.cl  render.cl
src/: main.cpp
